test/files/invalid/docstrings_namespace.stderr
error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_namespace.fbs:2:1
  │
2 │ /// Bad1
  │ ^^^^^^^^

error: Inner doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_namespace.fbs:3:1
  │
3 │ //! Bad2
  │ ^^^^^^^^

error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_namespace.fbs:4:1
  │
4 │ /// Bad3
  │ ^^^^^^^^

error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_namespace.fbs:5:11
  │
5 │ namespace /// Bad4
  │           ^^^^^^^^

error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_namespace.fbs:6:1
  │
6 │ /// Bad5
  │ ^^^^^^^^

error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_namespace.fbs:7:3
  │
7 │ A /// Bad6
  │   ^^^^^^^^

error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_namespace.fbs:8:1
  │
8 │ /// Bad7
  │ ^^^^^^^^

error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_namespace.fbs:9:3
  │
9 │ . /// Bad8
  │   ^^^^^^^^

error: Doc comments are not meaningful here.
   ┌─ test/files/invalid/docstrings_namespace.fbs:10:1
   │
10 │ /// Bad9
   │ ^^^^^^^^

error: Doc comments are not meaningful here.
   ┌─ test/files/invalid/docstrings_namespace.fbs:11:3
   │
11 │ B /// Bad10
   │   ^^^^^^^^^

error: Doc comments are not meaningful here.
   ┌─ test/files/invalid/docstrings_namespace.fbs:12:1
   │
12 │ /// Bad11
   │ ^^^^^^^^^

error: Doc comments are not meaningful here.
   ┌─ test/files/invalid/docstrings_namespace.fbs:13:3
   │
13 │ ; /// Bad12
   │   ^^^^^^^^^

error: Doc comments are not meaningful here.
   ┌─ test/files/invalid/docstrings_namespace.fbs:14:1
   │
14 │ /// Bad13
   │ ^^^^^^^^^

error: Inner doc comments are not meaningful here.
   ┌─ test/files/invalid/docstrings_namespace.fbs:15:1
   │
15 │ //! Bad14
   │ ^^^^^^^^^

Error: Bailing because of errors
